--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-usuario></app-usuario>
-<!-- agregamos esto -->
+<!-- agregamos esto
 <app-administrador></app-administrador>
 
 <app-reporte></app-reporte>
 
 <app-cliente></app-cliente>
+-->
