--- a/src/app/component/usuario/usuario-listar/usuario-listar.component.html
+++ b/src/app/component/usuario/usuario-listar/usuario-listar.component.html
@@ -4,10 +4,49 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <title>PC Info</title>
 </head>
 <body>
-  <div class="container" style="margin-top: 50px;">
+
+
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="logo.png" alt="Logo" width="50" height="50">
+            </a>
+
+            <!-- Hamburguesa -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="navbar-collapse collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">Componentes</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">Formulario</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">¿Quienes Somos?</a>
+                    </li>
+                    <li>
+                        <button class="btn btn-danger" type="button">Iniciar sesión</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+  </header>
+
+
+<div class="container-lg" style="margin-top: 50px;">
 
     <div style="text-align: center;">
       <h1>USUARIOS</h1>
@@ -16,62 +55,61 @@
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource">
 
-        <!-- Id Column -->
+
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> ID </th>
           <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
-        <!-- Id Column -->
+
         <ng-container matColumnDef="dni">
           <th mat-header-cell *matHeaderCellDef> DNI </th>
           <td mat-cell *matCellDef="let element"> {{element.dni}} </td>
         </ng-container>
 
 
-        <!-- Nombre Column -->
+
         <ng-container matColumnDef="nombre">
           <th mat-header-cell *matHeaderCellDef> Nombre </th>
           <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
         </ng-container>
 
-        <!-- ApellidoP Column -->
+
         <ng-container matColumnDef="apellidoPaterno">
           <th mat-header-cell *matHeaderCellDef> ApellidoPaterno </th>
           <td mat-cell *matCellDef="let element"> {{element.apellidoPaterno}} </td>
         </ng-container>
 
-        <!-- ApellidoM Column -->
         <ng-container matColumnDef="apellidoMaterno">
           <th mat-header-cell *matHeaderCellDef> ApellidoMaterno </th>
           <td mat-cell *matCellDef="let element"> {{element.apellidoMaterno}} </td>
         </ng-container>
 
-        <!-- Correo Column -->
+
         <ng-container matColumnDef="correo">
           <th mat-header-cell *matHeaderCellDef> Correo </th>
           <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
         </ng-container>
 
-        <!-- Sexo Column -->
+
         <ng-container matColumnDef="sexo">
           <th mat-header-cell *matHeaderCellDef> Sexo </th>
           <td mat-cell *matCellDef="let element"> {{element.sexo}} </td>
         </ng-container>
 
-        <!-- Edad Column -->
+
         <ng-container matColumnDef="edad">
           <th mat-header-cell *matHeaderCellDef> Edad </th>
           <td mat-cell *matCellDef="let element"> {{element.edad}} </td>
         </ng-container>
 
-        <!-- Contrasenia Column -->
+
         <ng-container matColumnDef="contrasenia">
           <th mat-header-cell *matHeaderCellDef> Contrasenia </th>
           <td mat-cell *matCellDef="let element"> {{element.contrasenia}} </td>
         </ng-container>
 
-        <!-- Pais Column -->
+
         <ng-container matColumnDef="pais">
           <th mat-header-cell *matHeaderCellDef> Pais </th>
           <td mat-cell *matCellDef="let element"> {{element.pais}} </td>
@@ -88,5 +126,8 @@
     </div>
 
   </div>
+
+
+
 </body>
 </html>
