Update de algunas cosas

--- a/src/app/component/usuario/usuario-listar/usuario-listar.component.html
+++ b/src/app/component/usuario/usuario-listar/usuario-listar.component.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 
-
   <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
@@ -17,12 +16,12 @@
                 <img src="logo.png" alt="Logo" width="50" height="50">
             </a>
 
-            <!-- Hamburguesa -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="navbar-collapse collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ms-auto mb-2 mb-md-0">
                     <li class="nav-item px-3">
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
