--- a/src/app/component/usuario/usuario-login/usuario-login.component.html
+++ b/src/app/component/usuario/usuario-login/usuario-login.component.html
@@ -8,6 +8,42 @@
 </head>
 <body>
 
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="logo.png" alt="Logo" width="50" height="50">
+            </a>
+
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">Componentes</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">Formulario</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">¿Quienes Somos?</a>
+                    </li>
+                    <li>
+                        <button class="btn btn-danger" type="button">Iniciar sesión</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+  </header>
+
+
 
   <section class="text-center">
     <main class="form-signin">
