--- a/src/app/component/usuario/usuario-listar/usuario-listar.component.html
+++ b/src/app/component/usuario/usuario-listar/usuario-listar.component.html
@@ -105,7 +105,9 @@
 
         <ng-container matColumnDef="contrasenia">
           <th mat-header-cell *matHeaderCellDef> Contrasenia </th>
-          <td mat-cell *matCellDef="let element"> {{element.contrasenia}} </td>
+          <td mat-cell *matCellDef="let element">
+            <input type="password" value="{{element.contrasenia}}" disabled>
+          </td>
         </ng-container>
 
 
@@ -118,7 +120,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
 
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+      <mat-paginator [pageSizeOptions]="[10, 20, 30]"
                      showFirstLastButtons
                      aria-label="Select page of periodic elements">
       </mat-paginator>
