--- a/src/app/component/administrador/administrador.component.html
+++ b/src/app/component/administrador/administrador.component.html
@@ -1,2 +1,5 @@
 <router-outlet></router-outlet>
-<app-administrador-listar></app-administrador-listar>
+<div [hidden]="route.children.length!==0">
+  <app-administrador-listar></app-administrador-listar>
+</div>
+
