--- a/src/app/component/componente/componente.component.html
+++ b/src/app/component/componente/componente.component.html
@@ -1,1 +1,4 @@
-<p>componente works!</p>
+<router-outlet></router-outlet>
+<div [hidden]="route.children.length!==0">
+  <app-componente-listar></app-componente-listar>
+</div>
