--- a/src/app/component/reporte/reporte.component.html
+++ b/src/app/component/reporte/reporte.component.html
@@ -1,2 +1,4 @@
 <router-outlet></router-outlet>
-<app-reporte-listar></app-reporte-listar>
+<div [hidden]="route.children.length!==0">
+  <app-reporte-listar></app-reporte-listar>
+</div>
