--- a/src/app/component/cliente/cliente-listar/cliente-listar.component.html
+++ b/src/app/component/cliente/cliente-listar/cliente-listar.component.html
@@ -7,7 +7,51 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="container">
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="logo.png" alt="Logo" width="50" height="50">
+            </a>
+
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item px-3">
+                      <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+                      <mat-menu #menu="matMenu">
+                        <button mat-menu-item routerLink="/usuarios">USUARIOS</button>
+                        <button mat-menu-item routerLink="/clientes">CLIENTES</button>
+                        <button mat-menu-item routerLink="/administradores">ADMINISTRADORES</button>
+                        <button mat-menu-item routerLink="/reportes">REPORTES</button>
+                        <button mat-menu-item routerLink="/componentes">COMPONENTES</button>
+                      </mat-menu>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">Componentes</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">Formulario</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">¿Quienes Somos?</a>
+                    </li>
+                    <li>
+                        <button class="btn btn-danger" type="button">Iniciar sesión</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+  </header>
+
+
+
+  <div class="container-lg" style="margin-top: 50px;">
 
     <div style="text-align: center;">
       <h1>CLIENTES</h1>
