--- a/src/app/component/componente/componente-listar/componente-listar.component.html
+++ b/src/app/component/componente/componente-listar/componente-listar.component.html
@@ -1,1 +1,54 @@
-<p>componente-listar works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="logo.png" alt="Logo" width="50" height="50">
+            </a>
+
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item px-3">
+                      <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+                      <mat-menu #menu="matMenu">
+                        <button mat-menu-item routerLink="/usuarios">USUARIOS</button>
+                        <button mat-menu-item routerLink="/clientes">CLIENTES</button>
+                        <button mat-menu-item routerLink="/administradores">ADMINISTRADORES</button>
+                        <button mat-menu-item routerLink="/reportes">REPORTES</button>
+                        <button mat-menu-item routerLink="/componentes">COMPONENTES</button>
+                      </mat-menu>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">Componentes</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">Formulario</a>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link active" aria-current="page" href="#">¿Quienes Somos?</a>
+                    </li>
+                    <li>
+                        <button class="btn btn-danger" type="button">Iniciar sesión</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+  </header>
+
+</body>
+</html>
