--- a/src/app/component/cliente/cliente-listar/cliente-listar.component.html
+++ b/src/app/component/cliente/cliente-listar/cliente-listar.component.html
@@ -60,9 +60,9 @@
       <table mat-table [dataSource]="dataSource">
 
         <!-- Id Column -->
-        <ng-container matColumnDef="id_cliente">
+        <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> ID </th>
-          <td mat-cell *matCellDef="let element"> {{element.id_cliente}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
         <!-- Id Column -->
