--- a/src/app/component/administrador/administrador-listar/administrador-listar.component.html
+++ b/src/app/component/administrador/administrador-listar/administrador-listar.component.html
@@ -30,6 +30,8 @@
                         <button mat-menu-item routerLink="/administradores">ADMINISTRADORES</button>
                         <button mat-menu-item routerLink="/reportes">REPORTES</button>
                         <button mat-menu-item routerLink="/componentes">COMPONENTES</button>
+                        <button mat-menu-item routerLink="/recomendacion">RECOMENDACION</button>
+
                       </mat-menu>
                     </li>
                     <li class="nav-item px-3">
