--- a/src/app/component/recomendacion/recomendacion-listar/recomendacion-listar.component.html
+++ b/src/app/component/recomendacion/recomendacion-listar/recomendacion-listar.component.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <title>PC Info</title>
+  <title>Recomendacion listar</title>
 </head>
 <body>
-
   <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
@@ -31,7 +29,7 @@
                         <button mat-menu-item routerLink="/administradores">ADMINISTRADORES</button>
                         <button mat-menu-item routerLink="/reportes">REPORTES</button>
                         <button mat-menu-item routerLink="/componentes">COMPONENTES</button>
-                        <button mat-menu-item routerLink="/recomendacion">RECOMENDACION</button>
+                        <button mat-menu-item routerLink="/Recomendacion">RECOMENDACION</button>
 
                       </mat-menu>
                     </li>
@@ -65,65 +63,29 @@
 
 
         <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <th mat-header-cell *matHeaderCellDef> id </th>
           <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
 
-        <ng-container matColumnDef="dni">
-          <th mat-header-cell *matHeaderCellDef> DNI </th>
-          <td mat-cell *matCellDef="let element"> {{element.dni}} </td>
+        <ng-container matColumnDef="valoracion_user">
+          <th mat-header-cell *matHeaderCellDef> valoracion_user </th>
+          <td mat-cell *matCellDef="let element"> {{element.valoracion_user}} </td>
         </ng-container>
 
 
 
-        <ng-container matColumnDef="nombre">
-          <th mat-header-cell *matHeaderCellDef> Nombre </th>
-          <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        <ng-container matColumnDef="notas_adicionales">
+          <th mat-header-cell *matHeaderCellDef> notas_adicionales </th>
+          <td mat-cell *matCellDef="let element"> {{element.notas_adicionales}} </td>
         </ng-container>
 
 
-        <ng-container matColumnDef="apellidoPaterno">
-          <th mat-header-cell *matHeaderCellDef> ApellidoPaterno </th>
-          <td mat-cell *matCellDef="let element"> {{element.apellidoPaterno}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="apellidoMaterno">
-          <th mat-header-cell *matHeaderCellDef> ApellidoMaterno </th>
-          <td mat-cell *matCellDef="let element"> {{element.apellidoMaterno}} </td>
-        </ng-container>
 
 
-        <ng-container matColumnDef="correo">
-          <th mat-header-cell *matHeaderCellDef> Correo </th>
-          <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
-        </ng-container>
 
 
-        <ng-container matColumnDef="sexo">
-          <th mat-header-cell *matHeaderCellDef> Sexo </th>
-          <td mat-cell *matCellDef="let element"> {{element.sexo}} </td>
-        </ng-container>
 
-
-        <ng-container matColumnDef="edad">
-          <th mat-header-cell *matHeaderCellDef> Edad </th>
-          <td mat-cell *matCellDef="let element"> {{element.edad}} </td>
-        </ng-container>
-
-
-        <ng-container matColumnDef="contrasenia">
-          <th mat-header-cell *matHeaderCellDef> Contrasenia </th>
-          <td mat-cell *matCellDef="let element">
-            <input type="password" value="{{element.contrasenia}}" disabled>
-          </td>
-        </ng-container>
-
-
-        <ng-container matColumnDef="pais">
-          <th mat-header-cell *matHeaderCellDef> Pais </th>
-          <td mat-cell *matCellDef="let element"> {{element.pais}} </td>
-        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -138,6 +100,5 @@
   </div>
 
 
-
 </body>
-</html>
+</html>>
