--- a/src/app/component/reporte/reporte-listar/reporte-listar.component.html
+++ b/src/app/component/reporte/reporte-listar/reporte-listar.component.html
@@ -49,7 +49,19 @@
         </div>
     </nav>
   </header>
-
+  <mat-grid-list cols="2" rowHeight="4em">
+    <mat-grid-tile>
+      <div style="text-align: right;">
+        <button mat-raised-button color="primary"
+                routerLink="/reportes/registrar">Nuevo</button>
+      </div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <mat-form-field>
+        <input matInput (keyup)="filtrar($event)" placeholder="Buscar">
+      </mat-form-field>
+    </mat-grid-tile>
+  </mat-grid-list>
 
 
   <div class="container-lg" style="margin-top: 50px;">
@@ -63,13 +75,13 @@
         <!-- Id Column -->
         <ng-container matColumnDef="id_reporte">
           <th mat-header-cell *matHeaderCellDef> ID </th>
-          <td mat-cell *matCellDef="let element"> {{element.id_reporte}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
         <!-- Id Column -->
         <ng-container matColumnDef="id_admin">
           <th mat-header-cell *matHeaderCellDef> ID Admin </th>
-          <td mat-cell *matCellDef="let element"> {{element.administrador.id_admin}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
         <!-- ApellidoP Column -->
@@ -88,6 +100,14 @@
         <ng-container matColumnDef="estado">
           <th mat-header-cell *matHeaderCellDef> Estado </th>
           <td mat-cell *matCellDef="let element"> {{element.estado}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="accion01">
+          <th mat-header-cell *matHeaderCellDef> Acciones </th>
+          <td mat-cell *matCellDef="let element">
+          <button mat-raised-button color="warn"
+              [routerLink]="['/reportes/editar',element.id]">Actualizar</button>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
