--- a/src/app/component/reporte/reporte-registrar/reporte-registrar.component.html
+++ b/src/app/component/reporte/reporte-registrar/reporte-registrar.component.html
@@ -6,7 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
+  <div class="container-lg" style="margin-top: 50px;">
+    <div style="text-align: center;">
+      <h1>Registar Reportes</h1>
+    </div>
+  </div>
+ <ng-container  >
   <form [formGroup]="form" (submit)="aceptar()">
     <mat-form-field class="example-full-width">
       <mat-label>Código</mat-label>
@@ -38,5 +45,6 @@
     <p>{{mensaje}}</p>
 
   </form>
+</ng-container>
 </body>
 </html>
