--- a/src/app/component/componente/componente-listar/componente-listar.component.html
+++ b/src/app/component/componente/componente-listar/componente-listar.component.html
@@ -57,16 +57,16 @@
 <div class="container-lg" style="margin-top: 50px;">
 
     <div style="text-align: center;">
-      <h1>USUARIOS</h1>
+      <h1>Componentes</h1>
     </div>
 
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource">
 
 
-        <ng-container matColumnDef="id_componente">
-          <th mat-header-cell *matHeaderCellDef> id_componente </th>
-          <td mat-cell *matCellDef="let element"> {{element.id_componente}} </td>
+        <ng-container matColumnDef="id_component">
+          <th mat-header-cell *matHeaderCellDef> id_component </th>
+          <td mat-cell *matCellDef="let element"> {{element.id_component}} </td>
         </ng-container>
 
 
