--- a/src/app/component/reporte/reporte-listar/reporte-listar.component.html
+++ b/src/app/component/reporte/reporte-listar/reporte-listar.component.html
@@ -63,7 +63,7 @@
     </mat-grid-tile>
     <mat-grid-tile>
       <mat-form-field>
-        <input matInput (keyup)="filtrar($event)" placeholder="Buscar">
+        <input matInput (keyup)="filter($event)" placeholder="Buscar">
       </mat-form-field>
     </mat-grid-tile>
   </mat-grid-list>
@@ -95,7 +95,7 @@
         <!-- Id Column -->
         <ng-container matColumnDef="fecha">
           <th mat-header-cell *matHeaderCellDef> Fecha </th>
-          <td mat-cell *matCellDef="let element"> {{element.fecha}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.fecha|date:'dd/MM/yyyy'}}</td>
         </ng-container>
 
         <!-- ApellidoM Column -->
@@ -111,6 +111,14 @@
               [routerLink]="['/reportes/editar',element.id]">Actualizar</button>
           </td>
         </ng-container>
+
+        <ng-container matColumnDef="accion2">
+          <th mat-header-cell *matHeaderCellDef> Acciones </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-raised-button color="accent" (click)="confirm(element.id)"><span class="material-icons">delete</span></button>
+          </td>
+        </ng-container>
+
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
