--- a/src/app/component/reporte/reporte-registrar/reporte-registrar.component.html
+++ b/src/app/component/reporte/reporte-registrar/reporte-registrar.component.html
@@ -22,9 +22,8 @@
     <br>
     <mat-form-field appearance="fill">
       <mat-label>Fecha</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="fecha"
-      max="maxFecha">
-      <mat-hint>DD/MM/YYYY</mat-hint>
+      <input matInput [matDatepicker]="picker" formControlName="fecha" max="maxFecha">
+      <mat-hint>MM/DD/YYYY</mat-hint>
       <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
