--- a/src/app/component/recomendacion/recomendacion-listar/recomendacion-listar.component.html
+++ b/src/app/component/recomendacion/recomendacion-listar/recomendacion-listar.component.html
@@ -30,6 +30,7 @@
                         <button mat-menu-item routerLink="/reportes">REPORTES</button>
                         <button mat-menu-item routerLink="/componentes">COMPONENTES</button>
                         <button mat-menu-item routerLink="/Recomendacion">RECOMENDACION</button>
+                        <button mat-menu-item routerLink="/comentario">COMENTARIO</button>
 
                       </mat-menu>
                     </li>
