--- a/src/app/component/componente/componente-listar/componente-listar.component.html
+++ b/src/app/component/componente/componente-listar/componente-listar.component.html
@@ -32,6 +32,7 @@
                         <button mat-menu-item routerLink="/reportes">REPORTES</button>
                         <button mat-menu-item routerLink="/componentes">COMPONENTES</button>
                         <button mat-menu-item routerLink="/recomendacion">RECOMENDACION</button>
+                        <button mat-menu-item routerLink="/comentario">COMENTARIO</button>
 
                       </mat-menu>
                     </li>
