--- a/src/app/component/usuario/usuario-listar/usuario-listar.component.html
+++ b/src/app/component/usuario/usuario-listar/usuario-listar.component.html
@@ -65,9 +65,9 @@
       <table mat-table [dataSource]="dataSource">
 
 
-        <ng-container matColumnDef="id">
+        <ng-container matColumnDef="id_usuario">
           <th mat-header-cell *matHeaderCellDef> ID </th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.id_usuario}} </td>
         </ng-container>
 
 
